# haskhol-deductive

./: HaskHOL-Deductive.cabal  README.md
src/HaskHOL/: Deductive.hs
src/HaskHOL/Lib/: Bool.hs  Canon.hs  Classic.hs  DRule.hs  Equal.hs  IndDefs.hs  Itab.hs  Meson.hs  Misc.hs  Quot.hs  Simp.hs  Tactics.hs  Theorems.hs  Trivia.hs  TypeQuant.hs
src/HaskHOL/Lib/Bool/: Base.hs  Context.hs  PQ.hs
src/HaskHOL/Lib/Classic/: A.hs  B.hs  Base.hs  C.hs  Context.hs  PQ.hs
src/HaskHOL/Lib/Classic/A/: Base.hs  Context.hs
src/HaskHOL/Lib/Classic/B/: Base.hs  Context.hs
src/HaskHOL/Lib/Classic/C/: Base.hs  Context.hs
src/HaskHOL/Lib/IndDefs/: Base.hs  Context.hs  PQ.hs
src/HaskHOL/Lib/Theorems/: Base.hs  Context.hs  PQ.hs
src/HaskHOL/Lib/Trivia/: A.hs  Base.hs  Context.hs  PQ.hs
src/HaskHOL/Lib/Trivia/A/: Base.hs  Context.hs
src/HaskHOL/Lib/TypeQuant/: Context.hs  PQ.hs
