name:          haskhol-deductive
version:       0.2.0
synopsis:      HaskHOL libraries for higher level deductive reasoning.
description:   More details can be found at the following page:  
               http://haskhol.org. 
license:       BSD3
license-file:  LICENSE
author:        Evan Austin <ecaustin@ittc.ku.edu>
maintainer:    Evan Austin <ecaustin@ittc.ku.edu>
category:      Theorem Provers
cabal-version: >=1.18
build-type:    Simple
stability:     experimental
homepage:      http://haskhol.org

library
    default-language:  Haskell2010
    default-extensions: ConstraintKinds, DeriveDataTypeable, OverloadedStrings,
                        PatternSynonyms, QuasiQuotes, TemplateHaskell, 
                        TypeFamilies
    build-depends:   base >= 4.7
                   , template-haskell >= 2.9
                   , wl-pprint-text >= 1.1
                   , haskhol-core >= 1.2

    exposed-modules:
      HaskHOL.Deductive
      HaskHOL.Lib.Equal
      HaskHOL.Lib.Bool
      HaskHOL.Lib.DRule
      HaskHOL.Lib.Tactics
      HaskHOL.Lib.Itab
      HaskHOL.Lib.Simp
      HaskHOL.Lib.Theorems
      HaskHOL.Lib.IndDefs
      HaskHOL.Lib.Classic
      HaskHOL.Lib.Trivia
      HaskHOL.Lib.Canon
      HaskHOL.Lib.Meson
      HaskHOL.Lib.Quot
      HaskHOL.Lib.Misc
      HaskHOL.Lib.TypeQuant

    exposed: True
    buildable: True
    hs-source-dirs: src

    other-modules:
      HaskHOL.Lib.Bool.Base
      HaskHOL.Lib.Bool.Context
      HaskHOL.Lib.Bool.PQ
      HaskHOL.Lib.Theorems.Base
      HaskHOL.Lib.Theorems.Context
      HaskHOL.Lib.Theorems.PQ
      HaskHOL.Lib.IndDefs.Base
      HaskHOL.Lib.IndDefs.Context
      HaskHOL.Lib.IndDefs.PQ
      HaskHOL.Lib.Classic.Base
      HaskHOL.Lib.Classic.Context
      HaskHOL.Lib.Classic.PQ
      HaskHOL.Lib.Trivia.Base
      HaskHOL.Lib.Trivia.Context
      HaskHOL.Lib.Trivia.PQ
      HaskHOL.Lib.TypeQuant.Context
      HaskHOL.Lib.TypeQuant.PQ
      HaskHOL.Lib.Trivia.PQ
             
    ghc-prof-options: -O2 -funbox-strict-fields -Wall -fprof-auto
                      -fno-warn-duplicate-constraints 
    ghc-options: -O2 -funbox-strict-fields -Wall -fno-warn-duplicate-constraints

source-repository head
  type: git 
  location: git://github.com/ecaustin/haskhol-deductive.git
 
